# discord_bot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
libdiscord/: CMakeLists.txt
libdiscord/include/libdiscord/: lib.hpp  root_certificates.hpp
libdiscord/lib/: CMakeLists.txt  lib.cpp
libwinapi/: .gitmodules  CMakeLists.txt
libwinapi/include/libwinapi/: defines.hpp  errors.hpp  lib.hpp  models.hpp  os.hpp  win_os.hpp  win_service.hpp  winservice.hpp
libwinapi/include/libwinapi/core/: errors.hpp  models.hpp  winservice.hpp
libwinapi/include/libwinapi/internal/: callbacks.hpp  models.hpp  os_service.hpp  win_api.hpp  winapi.hpp  winapi_adapter.hpp
libwinapi/include/libwinapi/v1/: errors.hpp  models.hpp  v1.hpp  winservice.hpp
libwinapi/include/libwinapi/v1/core/: errors.hpp  models.hpp  winservice.hpp
libwinapi/include/libwinapi/v1/internal/: callbacks.hpp  models.hpp  winapi.hpp  winapi_adapter.hpp
libwinapi/lib/: CMakeLists.txt  errors.cpp  lib.cpp  win_os.cpp  win_service.cpp
libwinapi/lib/core/: errors.cpp
libwinapi/lib/internal/: win_api.cpp  winapi.cpp
libwinapi/lib/v1/: errors.cpp
libwinapi/lib/v1/core/: errors.cpp
libwinapi/lib/v1/internal/: winapi.cpp
libwinapi/tests/: CMakeLists.txt  api_mocks.hpp  callback_tests.hpp  test.cpp  winapi_adapter_tests.hpp
libwinapi/tests/v1/: api_mocks.hpp  api_v1_tests.hpp  callback_tests.hpp
ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui.pro
ui/themes/: dark-orange.qrc
ui/ui/: ui.pro
